@@ -5,7 +5,7 @@
    */
 $settings = array('default_authorization' => 1,
                   'new_user_method'       => 2,
-                  'user_menu'             => 'top.tpl',
+                  'user_menu'             => 'css.tpl',
                   'graphic_confirm'       => 0,
                   'allow_remember'        => 1,
                   'forbidden_usernames'   => "admin\nroot\nwebmaster\nadministrator\neditor"
