@@ -1,0 +1,19 @@
+<div id="css-user-login">
+<!-- BEGIN login-form -->
+{START_FORM}
+<span id="username-entry">{PHPWS_USERNAME_LABEL} {PHPWS_USERNAME}</span>
+<span id="password-entry">{PHPWS_PASSWORD_LABEL} {PHPWS_PASSWORD}</span>
+<span id="submit-login">{SUBMIT}</span>
+{END_FORM}
+<!-- END login-form -->
+<!-- BEGIN links -->
+<!-- BEGIN new-account --><span id="new-account-link">{NEW_ACCOUNT}</span><!-- END new-account -->
+<!-- BEGIN forgot --><span id="forgot-link">{FORGOT}</span><!-- END forgot -->
+<!-- END links -->
+<!-- BEGIN user-panel -->
+<div id="user-panel">
+<div class="box-title"><h1>{DISPLAY_NAME}</h1></div>
+<span id="home-link">{HOME}</span><span id="panel-link">{PANEL}</span><span id="logout-link">{LOGOUT}</span>
+</div>
+<!-- END user-panel -->
+</div>
